# scaffold

./: .gitignore  .scaffold.toml  CLAUDE.md  README.md  go.mod  main.go  main_test.go
.github/workflows/: build.yml  release.yml
.scaffold/ai/: .scaffold.toml
.scaffold/ai/templates/: agent-send.sh  command.md  gitignore
.scaffold/ai/templates/commands/: optimize.md  refactor.md  review.md
.scaffold/ai/templates/cursor-docs/: README.md
.scaffold/ai/templates/cursorrules/: go.cursorrules  node.cursorrules  python.cursorrules  react.cursorrules  rust.cursorrules
.scaffold/ai/templates/instructions/: worker.md
.scaffold/ai/templates/mcp-server/: claude-config.json
.scaffold/ai/templates/mcp-server/typescript/: README.md  package.json  tsconfig.json
.scaffold/ai/templates/mcp-server/typescript/src/: index.ts
.scaffold/csharp/: .scaffold.toml
.scaffold/csharp/templates/: usecase-request.cs
.scaffold/devtools/: .scaffold.toml
.scaffold/devtools/templates/: dotnet-ci.yml  help.awk
.scaffold/go/: .scaffold.toml
.scaffold/go/templates/: service_test.go
.scaffold/python/: .scaffold.toml
.scaffold/python/templates/fastapi/: .env.example  Dockerfile  README.md  config.py  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt
.scaffold/python/templates/fastapi/routers/: health.py  users.py
.scaffold/python/templates/fastapi/tests/: test_main.py
.scaffold/python/templates/mcp-server/: .env.example  README.md  claude-config.json  mise.toml  pyproject.toml
.scaffold/python/templates/mcp-server/src/: __init__.py  main.py
.scaffold/python/templates/mcp-server/tests/: test_main.py
.scaffold/web/: .scaffold.toml
.scaffold/web/templates/: .prettierrc.json  eslint.config.js  gitignore  vite.config.ts
.scaffold/web/templates/src/: App.tsx  index.css
my-ai-team/: CLAUDE.md  README.md  agent-send.sh  setup.sh
my-ai-team/instructions/: boss.md  president.md  worker.md
templates/claude-init/: CLAUDE.md
templates/claude-init/commands/: debug.md  docs.md
templates/claude-multiagent/: CLAUDE.md  README.md  setup.sh
templates/claude-multiagent/instructions/: boss.md  president.md
templates/csharp/: entity.cs  exception.cs  repository-impl.cs  repository-interface.cs  usecase-response.cs  usecase.cs  valueobject.cs  webapi-controller.cs
templates/github-actions/: go-ci.yml  node-ci.yml  python-ci.yml
templates/go/: service.go
templates/makefile-advanced/: Makefile
templates/mvc/: controller.cs  view-create.cshtml  view-index.cshtml
templates/react/: component.test.tsx  component.tsx
templates/vite/: .prettierignore  package.json
templates/vite/src/: App.css
